[package]
name = "kbs-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "dylib", "staticlib"]

[[bin]]
name = "kbs-client"
path = "src/main.rs"

[dependencies]
# TODO: change it to "0.8.0", once released.
as-types = { git = "https://github.com/confidential-containers/attestation-service.git", tag = "v0.8.0", default-features = false }
anyhow.workspace = true
api-server.workspace = true
base64.workspace = true
clap = { version = "4.0.29", features = ["derive"] }
env_logger.workspace = true
jwt-simple = "0.11.4"
kbs_protocol = { path = "/home/rhopkins/src/attestation-research/cc-guest-components/attestation-agent/kbs_protocol" }
log.workspace = true
reqwest = { version = "0.11.18", default-features = false, features = ["cookies", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
sev = { version = "1.2.0", default-features = false, features = ["snp"] }
tokio.workspace = true
uuid = { version = "1.2.2", features = ["serde", "v4"] }